--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     ></script>
     <script defer src="js/swiper.js"></script>
     <!-- MAIN SCRIPT -->
-    <script defer src="js/swiper.js"></script>
+    <script defer src="js/main.js"></script>
   </head>
   <body>
     <header>
