complete the project

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     />
     <!-- MAIN CSS FILE -->
     <link rel="stylesheet" href="css/style.css" />
+    <style>
+      body {
+        background-image: url("images/bg-texture.png");
+      }
+    </style>
     <!-- SWIPER JS SCRIPT -->
     <script
       defer
