--- a/about.html
+++ b/about.html
@@ -18,6 +18,11 @@
     <!-- MAIN CSS FILE -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/about.css" />
+    <style>
+      body {
+        background-image: url("images/bg-texture.png");
+      }
+    </style>
     <!-- SWIPER JS SCRIPT -->
     <script
       defer
@@ -25,7 +30,7 @@
     ></script>
     <script defer src="js/swiper.js"></script>
     <!-- MAIN SCRIPT -->
-    <script defer src="js/swiper.js"></script>
+    <script defer src="js/main.js"></script>
   </head>
   <body>
     <header>
@@ -59,22 +64,21 @@
               <span class="icon">
                 <i class="uil uil-video"></i>
               </span>
-
-              <span>450+</span>
+              <span id="count-courses">0+</span>
               <span>courses</span>
             </div>
             <div class="box_num">
               <span class="icon">
                 <i class="uil uil-users-alt"></i>
               </span>
-              <span>79,000+</span>
+              <span id="count-students">0+</span>
               <span>students</span>
             </div>
             <div class="box_num">
               <span class="icon">
                 <i class="uil uil-trophy"></i>
               </span>
-              <span>26+</span>
+              <span id="count-awards">0+</span>
               <span>awards</span>
             </div>
           </div>
