--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <script defer src="js/main.js"></script>
   </head>
   <body>
+    <div class="loader">
+      <img src="images/1481.gif" alt="" />
+    </div>
     <header>
       <div class="container nav_container">
         <a href="index.html"><h4>egator</h4></a>
@@ -390,6 +393,7 @@
             </div>
           </div>
         </div>
+        <div class="swiper-pagination"></div>
       </div>
     </div>
     <footer>
