--- a/about.html
+++ b/about.html
@@ -31,6 +31,7 @@
     <script defer src="js/swiper.js"></script>
     <!-- MAIN SCRIPT -->
     <script defer src="js/main.js"></script>
+    <script defer src="js/achievements.js"></script>
   </head>
   <body>
     <header>
